# moogo

./: .gitignore  CLAUDE.md  LICENSE  QUALITY_SCALE.md  README.md  __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  hacs.json  manifest.json  pyproject.toml  sensor.py  strings.json  switch.py
.github/workflows/: bronze-tier-validation.yml  hacs-validate.yml  hassfest.yml  quality-scale-validation.yml
announcements/: homeassistant_community_forum.md
custom_components/moogo/: OFFLINE_HANDLING_IMPROVEMENTS.md  __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  models.py  mypy.ini  quality_scale.yaml  sensor.py  strings.json  switch.py  utils.py
custom_components/moogo/moogo_api/: client.py
custom_components/moogo/tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_circuit_breaker.py  test_retry_logic.py  test_spray_operations.py
custom_components/moogo/translations/: en.json
moogo_api/: __init__.py  client.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_integration.py  test_retry.py  test_sensor.py  test_switch.py  test_utils.py
